2025-12-31T02:09:21Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20610289845 # 855
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 51 635 / 53 637
* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 53 637
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-18] / []

2024-09-19T01:37:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10932891409 # 423
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-19
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 50 634 / 51 635
* notice: next accum: outdated-unq outdated-all / unq all: 51 635 / 53 637
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2023-11-05] / [2024-09-18]

2023-11-06T00:45:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6764855461 # 1350
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-06
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 49 633 / 50 634
* notice: next accum: outdated-unq outdated-all / unq all: 50 634 / 51 635
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-06] / [2023-11-05]

2022-10-07T02:31:33Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3201837661
* notice: last 14d: unq all: 1 1